<resources>
    <string name="app_name">BusinessCase</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="logout">LOGOUT</string>
    <string name="email">Email :</string>
    <string name="abc">ABC</string>
    <string name="name">Name :</string>
    <string name="map_key">AIzaSyA4TUlQj0MMXYxfhkJ2Sxg-f92Nfxv3D8Q</string>
</resources>